deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name:  my-webapp
spec:
  replicas: 5
  selector:
    matchLabels:
      app:  my-webapp
  template:
    metadata:
      creationTimestamp: null
      labels:
        app:  my-webapp
    spec:
      containers:
      - image: anandskd/demoaction:latest
        name: demoapp
