pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-podm
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: my-storage
  volumes:
    - name: my-storage
      persistentVolumeClaim:
        claimName: pvc-demom
