mongo-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  ports:
  - port: 27017
    name: mongodb
  clusterIP: None   # Headless service
  selector:
    app: mongo
