ingress_resources.yaml
# ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 80
          - path: /videos
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80
